--- a/androidApp/src/main/res/layout/activity_main.xml
+++ b/androidApp/src/main/res/layout/activity_main.xml
@@ -1,22 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main_view"
+    android:rotationX="57"
     tools:context=".MainActivity">
 
   <androidx.recyclerview.widget.RecyclerView
-      tools:listitem="@layout/movie_item"
-      tools:itemCount="5"
       android:id="@+id/movies"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/nextPage"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      tools:itemCount="5"
+      tools:listitem="@layout/movie_item" />
+
+  <Button
+      android:id="@+id/nextPage"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:layout_marginBottom="16dp"
+      android:text="Вперед ->"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toEndOf="@+id/previousPage"
+      app:layout_constraintTop_toBottomOf="@+id/movies" />
+
+  <Button
+      android:id="@+id/previousPage"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="<- Назад"
+      app:layout_constraintBottom_toBottomOf="@+id/nextPage"
+      app:layout_constraintEnd_toStartOf="@+id/nextPage"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/nextPage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
